# Auduit_test

./: add_test.py  add_test.ui  base.db  generate.bat  main.py  main.spec  mainwindow.py  mainwindow.ui  menu.py  menu.ui  pyproject.toml  untitled.ui
core/: config.py  crud.py  models.py
temp_ui/: add_test.ui  applicant.ui  create_test_menu.ui  list_applicant.ui  list_test.ui  mainwindow.ui  menu.ui  mid_menu_applicant.ui  mid_menu_test.ui  pass.ui  test.ui  untitled.ui
window/: add_test.py  applicant.py  create_test_menu.py  list_applicant.py  list_test.py  mainwindow.py  menu.py  mid_menu_applicant.py  mid_menu_test.py  password.py  test.py
