[tool.poetry]
name = "auduit-test"
version = "0.1.0"
description = ""
authors = ["Saatarko <saatarko@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyside6 = "^6.8.0.2"
sqlalchemy = "^2.0.36"
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
