[tool.poetry]
name = "auduit-test"
version = "0.1.0"
description = ""
authors = ["Saatarko <saatarko@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"  # Ограничиваем версию Python 3.9
pyside6 = "^6.8.0.2"
sqlalchemy = "^2.0.36"
pyinstaller = "==5.11.0"  # Указываем нужную версию PyInstaller
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"